Add edit profile function

--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ html {
 	line-height: 1.15; /* 1 */
 	-webkit-text-size-adjust: 100%; /* 2 */
 }
-
+.site-header.container{
+	
+}
 /* Sections
 	 ========================================================================== */
 
