--- a/css/booking.css
+++ b/css/booking.css
@@ -16,14 +16,17 @@
 }
 #booking {
 	font-family: 'PT Sans', sans-serif;
-	background-image: url('../images/view.jpeg');
+	background-color:rgba(152,152,156,0.7);
 	background-size: cover;
 	background-position: center;
 }
 
 .booking-form {
 	background: rgba(0, 0, 0, 0.7);
-	padding: 40px;
+	padding-top: 2px;
+	padding-left: 40px;
+	padding-right: 40px;
+	padding-bottom: 40px;
 	border-radius: 6px;
 }
 
@@ -42,7 +45,6 @@
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	border-radius: 40px;
-	padding: 0px 25px;
 }
 
 .booking-form .form-control::-webkit-input-placeholder {
@@ -158,7 +160,7 @@
 
 .booking-form .submit-btn {
 	color: #fff;
-	background-color: #f23e3e;
+	background-color: #009450;
 	font-weight: 400;
 	height: 50px;
 	font-size: 14px;
