Adjust button margin

--- a/style.css
+++ b/style.css
@@ -1241,6 +1241,7 @@ ul > li {
 	color: #fff;
 	padding: 0.7em 1.6667em 0.94em 1.6667em;
 	background-color: #009450;
+	margin-bottom: 50px;
 }
 /*=====gallery Images=========*/
 
