Implement About Us Page

--- a/inner-page-style.css
+++ b/inner-page-style.css
@@ -69,6 +69,7 @@ figcaption h4
 .people-info-wrap form input[type="submit"],
 .about-upper-section .who-we-are p,
 .about-upper-section .our-story a,
+.about-upper-section .our-story li,
 .course-detail .course-box h3,
 .course-detail .course-box button,
 .course-detail p,
