Fix minor error

--- a/style.css
+++ b/style.css
@@ -3534,7 +3534,9 @@ RESPONSIVE STYLESHEET
 }
 
 .what-other-say .owl-carousel .owl-nav button.owl-prev,
-.what-other-say .owl-nav button.owl-next {
+.what-other-say .owl-nav button.owl-next,
+.what-other-say .owl-carousel .owl-nav button.owl-next
+ {
 	padding: 0.2rem 1.4rem !important;
 }
 
