Change layout/ Implement rounding in checkout page

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -41,10 +41,13 @@
     margin-block: 0 1.5em;
   }
   
-  h2 {
+  h2,th {
     font-size: var(--font-size-h2);
     line-height: 1.2;
     margin-block: 0 0.5em;
+  }
+  th{
+    text-align: left;
   }
   
   legend {
@@ -66,6 +69,7 @@
   table {
     border-collapse: collapse;
     inline-size: 100%;
+    table-layout : fixed;
   }
   
 
